# SoulCage-Firmware

./: .gitignore  CMakeLists.txt  README.md  TODO.md  config-notes.md  default-board.cmake  esp_idf_project_configuration.json  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.waveshare-esp32-s3-lcd-touch-1.69
boards/: sdkconfig.waveshare-esp32-s3-lcd-1.28  sdkconfig.waveshare-esp32-s3-lcd-touch-1.69
components/custom/: project_include.cmake
info/: benchmark-results.txt
main/: CMakeLists.txt  Kconfig.projbuild  animation.cpp  benchmarks.cpp  display_controllers.cpp  driver_backlight.cpp  driver_battery.cpp  driver_buzzer.cpp  driver_display.cpp  dsp_memcpy.cpp  flash_image.cpp  flicker_effect.cpp  main.cpp  memory_dma.cpp  random.cpp  refresh_clock.cpp  spi_display.cpp  static_injector.cpp  video_streamer.cpp
main/include/: animation.h  battery_monitor.h  benchmarks.h  board_defs.h  display_controllers.h  driver_backlight.h  driver_battery.h  driver_buzzer.h  driver_display.h  dsp_memcpy.h  flash_image.h  flicker_effect.h  memory_dma.h  packed_color.h  pixel_types.h  random.h  refresh_clock.h  spi_display.h  static_injector.h  video_streamer.h
profiles/: ws-128  ws-t169
tests/: t.cpp
tools/: find_youtube_red.py  gen-cpp-command  gen-gc9a01-init.c++  gen_raw_image.py
